add env example files

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
+#############################
+# ENV file for CIgen system #
+#############################
+
 DEBUG=False
-SECRET_KEY=change me
+SECRET_KEY=change_me
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=hello_django_dev
