--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -10,9 +10,13 @@ services:
       - 8000:8000
     env_file:
       - ../.env.dev
+    depends_on:
+      - "postgres"
+    restart: always
+
   
   postgres:
-    image: postgres:12.0-alpine
+    image: postgres:14.2-alpine
     volumes:
       - ${DATA_PATH_HOST}/postgres:/var/lib/postgresql/data/
     environment:
@@ -22,6 +26,7 @@ services:
 
   pgadmin:
     image: dpage/pgadmin4:latest
+    user: root
     environment:
       - "PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}"
       - "PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}"
