Added quiz form and quiz admin

--- a/docker/web/Dockerfile.Alpine
+++ b/docker/web/Dockerfile.Alpine
@@ -1,5 +1,5 @@
 # pull official base image
-FROM python:3.9.4-buster
+FROM python:3.9.4-alpine3.12
 
 # set work directory
 WORKDIR /usr/src/app
@@ -9,8 +9,8 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # install psycopg2 dependencies
-# RUN apt update \
-#     && apt install -y libpq-dev python3-dev
+RUN apk update \
+    && apk add postgresql-dev gcc python3-dev musl-dev
 
 # install dependencies
 RUN pip install --upgrade pip
@@ -18,7 +18,8 @@ COPY ./requirements.txt .
 RUN pip install -r requirements.txt
 
 # create the app user
-RUN addgroup --system app && adduser --system --ingroup app app
+RUN addgroup -S app && adduser -S app -G app
+
 # set work directory
 WORKDIR /usr/src/app
 
@@ -32,4 +33,4 @@ RUN chown -R app:app ./
 USER app
 
 # run entrypoint.sh
-ENTRYPOINT ["/usr/src/entrypoint.sh"]
+ENTRYPOINT ["/usr/src/entrypoint.sh"] 
