Added countdown timer

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # ENV file for CIgen system #
 #############################
 
-DEBUG=False
+DJANGO_DEBUG=False
 SECRET_KEY=change_me
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
