--- a/docker/.env.example
+++ b/docker/.env.example
@@ -2,6 +2,17 @@
 # ENV file for docker compose #
 ###############################
 
+### Docker compose files ######
+
+# Select which docker-compose files to include. If using docker-sync append `:docker-compose.sync.yml` at the end
+COMPOSE_FILE=docker-compose.prod.yml
+
+# Change the separator from : to ; on Windows
+COMPOSE_PATH_SEPARATOR=:
+
+# Define the prefix of container names. This is useful if you have multiple projects that use the same containers to have seperate containers per project.
+COMPOSE_PROJECT_NAME=CIgen
+
 ##########General##########
 
 DATA_PATH_HOST=~/.CIgen/data
