--- a/docker/web/requirements.txt
+++ b/docker/web/requirements.txt
@@ -2,6 +2,7 @@ django==3.1.7
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 gunicorn==20.0.4
+numpy==1.22.3
 pandas==1.4.2
 openpyxl==3.0.9
 qrcode==7.3.1
